--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-$ git clone https://github.com/HarrisonParrish/HarrisonParrish.github.io
+$ cs HarrisonParrish.github.io
+$ echo "Hello World!" > index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
