--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-$ cs HarrisonParrish.github.io
-$ echo "Hello World!" > index.html
+$ git add --all
+$ git commit -m "Initial commit"
+$ git push -u oriting main
 <!DOCTYPE html>
 <html lang="en">
 <head>
